package jv.com.tencent.cain.design_pattern.facade;

/**
 * @author : jiangyu
 * @date : 2020/2/5
 * @desc : xxx
 */
public class SubSystemThree {
    public void methodThree() {
        System.out.println("子系统方法三");
    }
}
